# stok

./: Pipfile  README.md  goog.csv  playground.ipynb  pyproject.toml  sync_colab.sh
src/: charting.ipynb  main.py  paths.py  single_stock.py
src/stok/: models.py  portfolio.py  stok_paths.py
src/stok/contexts/: context.py
src/stok/emulator/: __init__.py  handler.py
src/stok/finrl_slim/: agent.py  analysis.py  baselines.py  callbacks.py  config.py  env.py  env2.py  optimiser.py  trainer.py
src/stok/finrl_slim/preprocessing/: preprocessors.py  yahoodownloader.py
src/stok/finrl_wip/: stock_trading.py
src/stok/simulator/: __init__.py  handler.py
src/stok/strategies/: __init__.py  moving_average.py  random_strategy.py  strategies.py
test/: conftest.py  test_emulator.py  test_portfolio.py  test_simulator.py
test/finrl_slim/: test_analysis.py  test_baselines.py  test_env.py
test/finrl_slim/fixtures/: goog.csv
test/simulator/: test_simulator.py
