[project]
dynamic = ["readme"]
name = "stok"
version = "0.0.1"
dependencies = [
    "yfinance",
    "pandas",
    "gymnasium",
    "stable-baselines3",
    "stockstats",
]

[tool.setuptools.packages.find]
exclude = ["stok.finrl_wip*"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.black]

[tool.isort]
profile = "black"

[tool.docformatter]
black = true
in-place = true
recursive = true
style = "google"

[tool.pytest.ini_options]
addopts = "-vv --doctest-modules"
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
markers = ["dbmocked: mark a test as using a mocked database"]
pythonpath = ["src", "test"]
testpaths = ["test"]
